--- a/s.css
+++ b/s.css
@@ -7,250 +7,49 @@ body
 {
     margin: 0;
     padding: 0;
-    background-color: blue;
-    font-family:'Times New Roman', Times, serif;
+    font-family: poppins;
 }
-
-
-
-li{
-    list-style-type: none;
-}
-label .menu
+.fix
 {
-    margin-left:175vh;
-position: fixed;
-right:-100px;
-top:-114px;
-z-index:100;
-width:210px;
-height:210px;
-background-color:transparent;
-border-radius:50% 50% 50% 50%;
-filter:blur();
-cursor:pointer;
-text-align: left;
-transition: 0.5s ease-in-out;
-}
-
-
-label .hamburger{
-
-    position:absolute;
-    top:135px;
-    left:50px;
-    width:30px;
-    height:1px;
-    background-color:#fff;
-    display: block;
-    transform-origin: center;
-    transition:0.9s ease-in-out;
-}
-
-label .hamburger:after
-{
-    content:" ";
-    position:absolute;
-  display: block;
-    width:100%;
-    height:100%;
-    background-color:#fff ;
-  
-}
-
-label .hamburger:before{
-    content:" ";
-    position:absolute;
-  display: block;
-     width:100%; 
-    height:100%;
-    background-color:#fff ;
-}
-
-label .hamburger:before{
-    top:-10px;
-    transition: 0.6s;
-}
-
-label .hamburger:after{
-    bottom:-10px;
-    transition: 0.6s;
-}
-
-label input{
-    display: none;
-}
-label input:checked + .menu{
-    box-shadow:0 0 0 100vw rgba(0,0,0,0.955);
-    border-radius: 0;
-    background-color:rgba(0,0,0,0.955);
-}
-label input:checked + .menu .hamburger{
-    transform: rotate(45deg);
-}
-label input:checked + .menu .hamburger:after{
-    transform: rotate(90deg);
-    bottom:0;
-}
-label input:checked + .menu .hamburger:before{
-    transform: rotate(90deg);
-    top:0;
-}
-label input:checked + .menu + ul{
-    opacity: 1;
-}
-label input:checked + .menu + ul{
-    opacity: 1;
-}
-label ul{
-    z-index:200;
-    position:absolute;
-    left:50%;
-    top:50%;
-    transform:translate(-50%,-50%);
-    opacity: 0;
-    transition: 0.30s 0s ease-in-out;
-     
-}
-label a{
-    margin-bottom: 1.2em;
-    font-size:20px;
-    display:block;
-    letter-spacing: 3px;
-    color:whitesmoke;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-align: center;
-    padding:12px 36 px;
-    font-weight:bold ;
-    transition: 0.4s ease-in-out;
-
-}
-label a:hover{
-    background-color:red;
-    color:#fff;
-    border-radius: 3px;
-    letter-spacing:3px;
-
-}
-
-
-
-
-
-#icons{
-    height:34px;
-    width:34px;
-    display:flex;
-    flex:vertical;
-    position: absolute;
+    clear: both;
+    overflow: hidden;
     
-    opacity:0;
-     margin-left:43.5% ;
-     margin-top: 38%;
-    /* margin-bottom:50%; */
-    z-index:1;
-    }
-#icons.active{
-
-    opacity: 1;
-    z-index:100000;
 }
-#button:hover{
-    background-color: papayawhip;
-    transition: 0.6s,0s ,ease-in-out;
-    width:14vw;
-    color:black;
-    font-family: 'Times New Roman', Times, serif;
-}
-#button{
-    background-color:transparent;
-    margin-top:-140px;
-width:15vw;
-height:5vh;
-font-size: 20px;
-border-color: transparent;
-text-align: left;
-color:whitesmoke;
-margin-left: 5%;
-position:absolute;
-border-radius: 6px;
-transition: 0.6s,0s ,ease-in-out;
-/* right:0%; */
-
-}
-.ticket{
-    margin-top:-150px;
-    position:relative;
-   right:30%;
-}
-
-
-
-.iconsubclass
-{
-    /* left:100vw;   */
-    margin-left:15px;
-    margin-right: 16px;
-    height:34px;
-    width:34px;
-    text-decoration: none;   
-}
-.iconsubclass:hover
-{
-    margin-left:15px;
-    margin-right: 16px;
-    height:34px;
-    width:34px;
-    background-color: transparent;   
-}
-.menuicon{
-    text-align: right;
-}
-
-
 header
 {
     overflow: hidden;
     height: 100vh;
+    top: 0;
 }
-
-
-
-
 .vid-bg
 {
     opacity: 1;
     position: absolute;
-    right: 0;
-    bottom: 0;
     min-width: 100%;
-    min-height: 100%;
 }
 .nav-area
 {
     background-color: transparent;
-    
+    z-index: 3;
     height: 60px;
     position: absolute;
     width: 100%;
 }
 .logo
 {
-    margin: 10 50px;
+    margin: 0 50px;
     height: 60px;
-
     float: left;
     color: #fff;
-    font-size: 25px;
+    font-size: 35px;
     text-transform: capitalize;
     font-weight: bold;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
+    z-index:3;
 }
 .logo span
 {
-    color: white;
+    color: #f5bb00;
 }
 .menu-area{
     float: right;
@@ -277,22 +76,22 @@ header
 .banner-text
 {
     position: absolute;
-    top: 25%;
+    top: 30%;
     text-align: center;
     left: 35%;
-    letter-spacing: 3px;
+    
 }
 .banner-text h2{
     color: #fff;
     font-size: 80px;
     margin: 0;
- 
+    text-shadow: 5px 5px black;
     
 }
 .banner-text h2 span
 {
     color: #fff;
- 
+    text-shadow: 5px 5px black;
 
 }
 .banner-text h3{
@@ -300,11 +99,12 @@ header
     font-size: 18px;
     margin: 0;
     font-weight: bold;
- }
+    text-shadow: 2px 2px black;
+}
 .btn{
     display: inline-block;
-    margin-top: 10%;
-    margin-left: 0%;
+    margin-top: 25%;
+    margin-left: 5%;
     background: transparent;
     border: 0;
     font-size: 20px;
@@ -312,7 +112,7 @@ header
     border: 3px solid #fff;
     padding: 10px 25px;
     color: #fff;
-    border-radius: 15px;
+    border-radius: 0px;
     outline: none;
 }
 .btn:hover
@@ -321,63 +121,287 @@ header
     color: whitesmoke;
 }
 
-
-
-/* timer */
+/* menu starts */
 
 
 
-h1 span{
-    display:inline-block;
-    animation:animate 1s linear infinite;
+#hamburger{
+
+    position:sticky;
+    margin-top:100px;
+    top:135px;
+    left:50px;
+    width:30px;
+    height:1px;
+    background-color:#fff;
+    display: block;
+    transform-origin: center;
+    transition:0.5s ease-in-out;
 }
-   #clockdiv{ 
-      
-      position:relative;
-      
-      margin-left:41vw;
-      margin-top: 47vh;
-      
-      color:wheat; 
-      display: inline-block; 
-      font-weight: 100; 
-      text-align: center; 
-      font-size: 18px; 
-  
-  
+
+
+
+.hamburger{
+    z-index: 15;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: fit-content;
+    height: auto;
+    padding: 0.5em;
+    margin-left: auto;
+    position: fixed;
+    right: 30;
+}
+
+.line-n{
+    border: white 0.098rem solid;
+    margin: 0.2rem 0;
+    width: 1.4em;
+    height: auto;
+}
+
+.line-n.clicked:nth-child(1){
+    transform: translate(0px, 8.2px) rotateZ(135deg);
+    transition: all 0.7s ease;
+}
+.line-n.clicked:nth-child(2){
+    transition: all 0.7s ease;
+    display: none;
+}
+.line-n.clicked:nth-child(3){
+    transform : rotateZ(45deg);
+    transition: all 0.7s ease;
+}
+
+/* menu ends */
+
+
+
+/* sidebar css */
+.con:hover{
+    background-color: rgba(255, 38, 0, 0.925);
+    border-radius: 6px;
+    transition:1s;
+    letter-spacing: 4px;
+}
+.sub:hover{
+    background-color:red;
+    letter-spacing: 2px;
+    border-radius: 6px;
+    transition: 2s;
+   
+}
+.sub{
+margin-top:2.7vh;
+    height:30px;
+    
+}
+
+.grab
+{
+    position:absolute;
+    left:42vw;
+    top:5vh;
+    display:flex;
+    flex-direction: row;
+    background-color: transparent;
+   
+}
+
+.menu{
+    position:fixed;
+    left:94%;
+bottom:92.5%;
+max-width:9px;
+z-index:3;
+}
+
+#iconsy{
+    height:22px;
+    width:22px;
+    display:flex;
+    flex:vertical;
+    position: relative;
+    margin-left:3vw;
+    margin-bottom: 5px;
+    z-index:1;
+    text-align: center;
     }
-    #clockdiv.active{
-        opacity:0.4;
-        transition: 0.3s,0s,ease-in-out;
-    } 
-  #clockdiv > div{ 
-      
-      padding: 10px; 
-      border-radius: 3px; 
-      /* background: orange;  */
-      display: inline-block; 
-      
-      text-align: center; 
-  
-  } 
-  #clockdiv div > span{ 
-    background-position-x: center;
-      padding: 10px; 
-      padding-bottom: 1px;
-      height:40px;
-      width:32px;
-      border-radius: 3px; 
-      background: rgba(0,0,0,0.8); 
-      display: inline-block; 
-      
-      
-      box-shadow:5px;
-      text-align: center; 
-  } 
-  .smalltext{ 
-      padding-top: 0px; 
-      font-size: 15px; 
-      position: relative;
-      top:-15px;
-  } 
-/* timer ends */
+
+    #iconsy:hover{
+        background-color: brown;
+        height:26px;
+        width:26px;
+        display:flex;
+        flex:vertical;
+        position: relative;
+        margin-left:3vw;
+        margin-bottom: 5px;
+        z-index:1;
+        text-align: center;
+        }
+    
+    
+    
+
+
+#sticky.active{
+    position: relative;
+    left:2000px;
+    background-color:brown
+}
+#sidebar
+{
+    right:-2500px;
+    width:100%;
+    height:100%;
+    position:fixed;
+        display:flex;
+        flex-direction: row;
+    background-color: rgba(0,0,0,0.9);
+    font-family:'Times New Roman', Times, serif;
+    letter-spacing: 1px;
+    color:wheat;
+    z-index:2;
+    transition: all 420ms cubic-bezier(0.895, 0.03, 0.685, 0.22);
+}
+#sidebarcontent{
+text-align: center;
+position: absolute;
+left:36vw;
+letter-spacing: 1px;
+top:5vh; 
+font-size:25px;
+
+
+
+
+}
+
+#sidebar.active{
+    right:0px;
+}
+
+#sidebar ul li{
+    list-style:none ;
+    position: relative;
+    top:140px;
+    left:100px;
+    margin-top:7px;
+    border-bottom: 1px,solid,white;
+}
+
+#sidebar ul li :hover
+{
+    background-color: red;
+    list-style:none ;
+    position: relative;
+    top:140px;
+    left:100px;
+    margin-top:7px;
+    border-bottom: 1px,solid,white;
+}
+.line
+{
+    position:relative;
+    left:59%;
+    width:2px;
+    height:400px;
+    background-color:wheat;
+    margin-top:60px;
+    border-left: 1px,solid,white;
+}
+.line1
+{
+    border-radius: 2px;
+    position:relative;
+    left:5%;
+    padding-left: 3px;
+    padding-right: 1px;
+    color:whitesmoke;
+    width:13px;
+    height:300px;
+    background-color:rgba(0,0,0,0.9);
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    
+}
+.iconslast1{
+    height:24px;
+    width:24px;
+    display:flex;
+    flex:horizontal;
+    justify-content:space-between;
+    position: relative;
+    left:43vw;
+   top:35vw;
+   margin-top: 30px;
+     z-index:1;
+}
+
+
+@keyframes fade{
+from{
+opacity: 0;
+}
+to{
+opacity:1;
+}
+
+}
+/* sidebar css ends */
+
+/* loader begin */
+
+
+
+
+
+.loader-bg{
+    position: fixed;
+    z-index: 99999;
+    background:black;
+    width:100%;
+    height:100%;
+}
+.loader{
+    border: 0 solid transparent;
+    border-radius:50%;
+    width:200px;
+    height:200px;
+    position: absolute;
+
+}
+.loader:before, .loader:after{
+    content:'';
+    border:1em solid orangered;
+    border-radius:50%;
+    width:inherit;
+    height: inherit;
+    position:absolute;
+    top:10vh;
+    left:43vw;
+    animation:loader 2s linear infinite;
+    opacity:0;
+}
+.loader:before{
+    animation-delay: 0.5s;
+}
+
+@keyframes loader{
+    0%{
+transform: scale(0);
+opacity:0;
+    }
+    50%{
+opacity:1;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 0;
+
+    }
+}
+
+/* loader ends */
