--- a/s.css
+++ b/s.css
@@ -123,7 +123,7 @@ header
 
 /* menu starts */
 
-
+/* 
 
 #hamburger{
 
@@ -138,7 +138,7 @@ header
     transform-origin: center;
     transition:0.5s ease-in-out;
 }
-
+ */
 
 
 .hamburger{
@@ -155,22 +155,23 @@ header
 }
 
 .line-n{
-    border: white 0.098rem solid;
-    margin: 0.2rem 0;
-    width: 1.4em;
+    border: white 0.09rem solid;
+    margin: 0.19rem 0;
+    width: 1.5em;
     height: auto;
 }
-
+/* Dont change it into CROSS */
 .line-n.clicked:nth-child(1){
-    transform: translate(0px, 8.2px) rotateZ(135deg);
+    transform: rotate(360deg);
     transition: all 0.7s ease;
 }
 .line-n.clicked:nth-child(2){
+    transform: rotate(360deg);
     transition: all 0.7s ease;
-    display: none;
+    /* display: none; */
 }
 .line-n.clicked:nth-child(3){
-    transform : rotateZ(45deg);
+    transform : rotateZ(360deg);
     transition: all 0.7s ease;
 }
 
@@ -180,19 +181,19 @@ header
 
 /* sidebar css */
 .con:hover{
-    background-color: rgba(255, 38, 0, 0.925);
+    background-color: rgba(118, 41, 28, 0.925);
     border-radius: 6px;
     transition:1s;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
 }
-.sub:hover{
+.subo:hover{
     background-color:red;
     letter-spacing: 2px;
     border-radius: 6px;
     transition: 2s;
    
 }
-.sub{
+.subo{
 margin-top:2.7vh;
     height:30px;
     
@@ -208,7 +209,9 @@ margin-top:2.7vh;
     background-color: transparent;
    
 }
-
+.grab:hover{
+cursor:pointer;
+}
 .menu{
     position:fixed;
     left:94%;
@@ -269,19 +272,27 @@ z-index:3;
 #sidebarcontent{
 text-align: center;
 position: absolute;
-left:36vw;
+left:36.9vw;
 letter-spacing: 1px;
 top:5vh; 
 font-size:25px;
-
-
-
-
 }
-
+#sidebarcontent:hover{
+    text-align: center;
+    position: absolute;
+    left:36.9vw;
+    letter-spacing: 1px;
+    top:5vh; 
+    font-size:25px;
+    cursor:pointer;
+    }
 #sidebar.active{
     right:0px;
 }
+/* #sidebar.deactivate
+{
+    right:-2500px;
+} */
 
 #sidebar ul li{
     list-style:none ;
@@ -380,7 +391,7 @@ opacity:1;
     width:inherit;
     height: inherit;
     position:absolute;
-    top:10vh;
+    top:30vh;
     left:43vw;
     animation:loader 2s linear infinite;
     opacity:0;
@@ -405,3 +416,355 @@ opacity:1;
 }
 
 /* loader ends */
+
+
+
+
+
+
+
+
+
+
+
+/* flipper */
+
+
+
+
+#card {
+    position: relative;;
+    height: 70vh;
+    width: 100vw;
+    perspective: 500px;
+  }
+  
+ #content {
+    position: relative;
+    height: 70vh;
+    width: 48vw;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    transition: transform 1s;
+    transform-style: preserve-3d;
+  }
+  
+#content:hover {
+    position: relative;
+   
+    height: 70vh;
+    width: 48vw;
+       perspective: 200px;
+    transform: rotateY( 180deg ) ;
+    transition: transform 0.5s;
+    
+  }
+
+  #content:hover .sub{
+      display: none;
+  }
+  .sub{
+    position: relative;
+    left: 25vw;
+    top:-55vh;
+    height:55vh;
+    width: 23vw;
+    background-color: black;
+  }
+  .sub h1
+  {
+    color: whitesmoke;
+    font-family: "Jost", "Glacial Indifference", "Montserrat", "Open Sans", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    position: fixed;
+     margin-left: 2vw;
+     top: 5vh;
+  }
+  .sub h2
+  {
+    color: whitesmoke;
+    font-family: "Jost", "Glacial Indifference", "Montserrat", "Open Sans", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    position: fixed;
+     margin-left: 2vw;
+     top: 20vh;
+  }
+  .sub h3
+  {
+    color: whitesmoke;
+    font-family: "Jost", "Glacial Indifference", "Montserrat", "Open Sans", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    position: fixed;
+     margin-left: 2vw;
+     top: 25vh;
+  }
+  
+  .back {
+    left: 2vw;
+    top:1vh;
+    position: relative;
+    height:55vh;
+    width: 23vw;
+    background: white;
+    line-height: 300px;
+    color: #03446A;
+    text-align: center;
+    font-size: 60px;
+    border-radius: 5px;
+    backface-visibility: hidden;
+  }
+  .back {
+      margin-top: -54.5vh;
+      margin-right:-23vw;
+    background: black;
+    color: white;
+    transform: rotateY( 180deg );
+  }
+
+
+
+
+
+
+
+
+
+
+  
+#card {
+    position: relative;;
+    height: 70vh;
+    width: 100vw;
+    perspective: 500px;
+  }
+  
+ #content1 {
+    position: relative;
+    height: 70vh;
+    width: 48vw;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    transition: transform 1s;
+    transform-style: preserve-3d;
+  }
+  
+#content1:hover {
+    position: relative;
+   
+    height: 70vh;
+    width: 48vw;
+       perspective: 200px;
+    transform: rotateY( 180deg ) ;
+    transition: transform 0.5s;
+    
+  }
+  #content1:hover .subs2 img{
+      display: none;
+  }
+
+  #content1:hover .sub1{
+      display: none;
+  }
+  .sub1{
+    position: relative;
+    left: 25vw;
+    top:-55vh;
+    height:55vh;
+    width: 23vw;
+    background-color: black;
+  }
+  .sub1 h1
+  {
+    color: whitesmoke;
+    font-family: "Jost", "Glacial Indifference", "Montserrat", "Open Sans", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    position: fixed;
+     margin-left: 2vw;
+     top: 5vh;
+  }
+  .sub1 h2
+  {
+    color: whitesmoke;
+    font-family: "Jost", "Glacial Indifference", "Montserrat", "Open Sans", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    position: fixed;
+     margin-left: 2vw;
+     top: 20vh;
+  }
+  .sub1 h3
+  {
+    color: whitesmoke;
+    font-family: "Jost", "Glacial Indifference", "Montserrat", "Open Sans", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    position: fixed;
+     margin-left: 2vw;
+     top: 25vh;
+  }
+  
+  .back1 {
+    left: 2vw;
+    top:1vh;
+    position: relative;
+    height:55vh;
+    width: 23vw;
+    background: white;
+    line-height: 300px;
+    color: #03446A;
+    text-align: center;
+    font-size: 60px;
+    border-radius: 5px;
+    backface-visibility: hidden;
+  }
+  .back1 {
+      margin-top: -42vh;
+      margin-right:-200vw;
+    background: black;
+    color: white;
+    transform: rotateY( 180deg );
+  }
+
+  .subs2
+  {
+    position: relative;
+    left: 0vw;
+    top:14vh;
+    
+
+    height: 55vh;
+    width: 23vw;
+  }
+
+  .subs2 img
+  {
+    background-image: url('OLLY.jpeg');
+    height: 55vh;
+    width: 23vw;
+    background-repeat: no-repeat;
+  }
+
+/* end */
+#overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: whitesmoke;
+    opacity: 0.3;
+    overflow: hidden;
+    width: 20vw;
+    height: 0;
+    transition: .5s ease;
+  }
+
+  .about_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .about_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .past_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .past_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .glimpses_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .glimpses_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .highlights_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .highlights_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .stats_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .stats_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  
+  .mightSay_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .mightSay_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .statsNo1_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .statsNo1_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .statsNo2_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .statsNo2_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  .statsNo3_ani {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .statsNo3_ani .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  #btnSeeMore_1{
+    height: 5.5vh;
+    width: 8vw;
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    box-shadow: 6px 5px 10px whitesmoke;
+    background-color: black;
+    color: white;
+    position: absolute;
+    right: 40px;
+  }
+  #btnSeeMore_2{
+    height: 5.5vh;
+    width: 8vw;
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    box-shadow: 6px 5px 10px whitesmoke;
+    background-color: black;
+    color: white;
+    position: absolute;
+    right: 40px;
+  }
